--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "npx nodemon",
     "build": "rimraf ./build && tsc",
     "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
-    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
     "@typescript-eslint/parser": "^5.54.0",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.6.0",
+    "husky": "^8.0.3",
     "nodemon": "^2.0.21",
     "prettier": "^2.8.4",
     "rimraf": "^4.3.0",
