--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "jest",
+    "test:watch": "jest --watch",
     "dev": "npx nodemon",
     "build": "rimraf ./build && tsc",
     "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
@@ -30,15 +31,18 @@
   },
   "homepage": "https://github.com/scorpion-devv/apiSchoolite#readme",
   "devDependencies": {
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.14.6",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.6.0",
     "husky": "^8.0.3",
+    "jest": "^29.4.3",
     "nodemon": "^2.0.21",
     "prettier": "^2.8.4",
     "rimraf": "^4.3.0",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
