--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,14 +22,15 @@
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/consistent-type-definitions": ["error", "type"],
     "no-unused-vars": "error",
+    "no-duplicate-imports": "error",
     "camelcase": "error",
     "class-methods-use-this": "warn",
     "consistent-return": "error",
     "constructor-super": "error",
     "default-case": "error",
-    "max-depth": [3, "error"],
-    "max-lines": [10, "error"],
-    "max-params": [10, "error"],
+    "max-depth": ["error", 3],
+    "max-lines": ["error", 100],
+    "max-params": ["error", 6],
     "sort-vars": "error",
     "sort-imports": "error",
     "sort-keys": "error",
