--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "rimraf ./build && tsc",
     "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test:silent":"jest --watchAll --silent --noStackTrace"
   },
   "repository": {
     "type": "git",
